--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "author": "coinscrow",
   "contributors": [],
   "dependencies": {
-    "chalk": "^2.4.2",
-    "colors": "^1.4.0",
-    "decompress": "^4.2.0",
-    "download": "^7.1.0",
-    "execa": "^0.10.0",
-    "express": "^4.17.1",
-    "fkill": "^5.3.0",
+    "chalk": "2.4.2",
+    "colors": "1.4.0",
+    "decompress": "4.2.1",
+    "download": "7.1.0",
+    "execa": "0.10.0",
+    "express": "4.17.1",
+    "fkill": "5.3.0",
     "needle": "2.7.0",
-    "parse-spawn-args": "^1.0.2",
-    "progress": "^2.0.3",
-    "pump": "^3.0.0",
-    "readline-sync": "^1.4.10",
-    "request": "^2.88.0",
-    "sleep": "^5.2.4",
-    "sphp": "^0.6.3"
+    "parse-spawn-args": "1.0.2",
+    "progress": "2.0.3",
+    "pump": "3.0.0",
+    "readline-sync": "1.4.10",
+    "request": "2.88.2",
+    "sleep": "5.2.4",
+    "sphp": "0.6.3"
   },
   "scripts": {
     "start": "node start.js"
