--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   nvidia:
     platform: linux/amd64
-    image: nvidia/cuda:12.0.0-runtime-ubuntu22.04
+    image: nvidia/cuda:12.0.0
     command: nvidia-smi
     deploy:
       resources:
