--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,10 @@ services:
               capabilities: [ gpu ]
   #  env_file:
    #   - .env
-    depends_on:
-      - nvidia
-    links:
-      - nvidia
+#    depends_on:
+#      - nvidia
+#    links:
+#      - nvidia
     networks:
       - minerstats
 
