--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 
 services:
   test:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: hanaik/minerstat
     user: root
     deploy:
       resources:
