--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   test:
-    platform: linux/amd64
+    platform: "linux/amd64"
     image: hanaik/minerstat:late
     user: root
     command: node /home/minerstat/minerstat-os/start
