--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-
+version: "3"
 services:
   test:
     platform: "linux/amd64"
@@ -9,4 +9,6 @@ services:
       resources:
         reservations:
           devices:
-            - capabilities: [ gpu ]
+            - driver: nvidia
+              device_ids: ['0', '3']
+              capabilities: [ gpu ]
